[project]
name = "cochleogram"
description = "Module for creating cochleograms from confocal images"
readme = "readme.rst"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Brad Buran", email="buran@ohsu.edu"},
]
maintainers = [
    {name = "Brad Buran", email="buran@ohsu.edu"},
]
dependencies = [
    "atom",
    "enaml >= 0.0.19",
    "matplotlib",
	"ndimage-enaml >= 0.0.13",
    "numpy",
    "pandas",
    "scipy",
    "scikit-image",
    "psiaudio",
]
dynamic = ["version"]

[project.optional-dependencies]
czi = ["aicspylibczi"]
lif = ["readlif"]
dev = ["docutils"]
ims = ["h5py"]

[project.scripts]
cochleogram = "cochleogram.main:main"

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cochleogram/version.py"
